--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,11 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Build the binary
+      run: go build -o dcloud
 
-    - name: Test
-      run: go test -v ./...
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: dcloud
+        path: dcloud
